# MNIST-CNN

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp
src/: Constants.h  Filter.cpp  Filter.h  FullyConnected.cpp  FullyConnected.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  Normalization.cpp  Normalization.h  Padding.cpp  Padding.h  PixelStream.cpp  PixelStream.h  RandomSeed.cpp  RandomSeed.h  Relu.cpp  Relu.h  RollingVolume.cpp  RollingVolume.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h  TrainingImages.cpp  TrainingImages.h  TrainingLabels.cpp  TrainingLabels.h  Volume.cpp  Volume.h  Volume4d.cpp  Volume4d.h  VolumeConcatenation.cpp  VolumeConcatenation.h  WeightedLayer.cpp  WeightedLayer.h
test/: FilterTest.cpp  FilterTest.h  InputLayerTest.cpp  InputLayerTest.h  IntegrationTest.cpp  IntegrationTest.h  NormalizationTest.cpp  NormalizationTest.h  ReluTest.cpp  ReluTest.h  VolumeConcatenation.cpp  VolumeConcatenation.h
