cmake_minimum_required(VERSION 2.8)
project( main )
find_package( OpenCV REQUIRED )
find_package(Boost REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -m64 -O3")
file(GLOB SOURCE_FILES "src/*.cpp")
add_executable(main ${SOURCE_FILES} main.cpp)
target_link_libraries( main ${OpenCV_LIBS})
file(GLOB TEST_FILES "test/*.cpp")
add_subdirectory(lib/googletest)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ${gmock_SOURCE_DIR}/include ${gmock_SOURCE_DIR})
add_executable(test ${SOURCE_FILES} ${TEST_FILES} test.cpp)
target_link_libraries(test gtest gtest_main gmock gmock_main)